Stylistic changes and updated HTML

--- a/index.html
+++ b/index.html
@@ -1,2 +1,46 @@
-<h1>Auva M. Amirmokri</h1>
-<body>Welcome to my website!</body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me - Auva Amirmokri</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
+    <h1>Auva Amirmokri</h1>
+    <p>Class of '24 Computer Science Student at the University of Maryland</p>
+  </header>
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Hi, I'm Auva Amirmokri! I'm a passionate Computer Science student at the University of Maryland. I love coding and
+        exploring the latest technologies. My interests include web development, artificial intelligence, and software
+        engineering.
+      </p>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>C++</li>
+        <li>Java</li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>
+        Want to collaborate or hire me? Feel free to reach out to me at:
+        <a href="mailto:auvaamirmokri@gmail.com">auvaamirmokri@gmail.com</a>
+      </p>
+    </section>
+  </main>
+</body>
+
+</html>
