Stylistic changes and updated HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me - Auva Amirmokri</title>
+  <title>Auva Amirmokri</title>
+  <!-- add image-->
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,9 +18,8 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hi, I'm Auva Amirmokri! I'm a passionate Computer Science student at the University of Maryland. I love coding and
-        exploring the latest technologies. My interests include web development, artificial intelligence, and software
-        engineering.
+        Hi, I'm Auva Amirmokri! I'm passionate about technology and the environment, and love to explore the intersectionality of the two. Computer Science student at the University of Maryland. 
+        I love coding and exploring the latest technologies. I love web development and backend development, specifically in Java and JS. 
       </p>
     </section>
     <section id="skills">
