Stylistic changes and updated HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auva Amirmokri</title>
   <!-- add image-->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,24 +19,25 @@
       <h2>About Me</h2>
       <p>
         Hi, I'm Auva Amirmokri! I'm passionate about technology and the environment, and love to explore the intersectionality of the two. Computer Science student at the University of Maryland. 
-        I love coding and exploring the latest technologies. I love web development and backend development, specifically in Java and JS. 
+        I love coding and exploring the latest technologies. I love web development and backend development, specifically in Java and JS.
+        <br> My other interests include analog photography, traveling, exploring nature, and spending time with animals! 
       </p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
       <ul>
+        <li>Java</li>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>Python</li>
         <li>C++</li>
-        <li>Java</li>
       </ul>
     </section>
     <section id="contact">
       <h2>Contact</h2>
       <p>
-        Want to collaborate or hire me? Feel free to reach out to me at:
+        Questions, comments, want to chat? Feel free to reach out to me at:
         <a href="mailto:auvaamirmokri@gmail.com">auvaamirmokri@gmail.com</a>
       </p>
     </section>
