Stylistic changes and updated HTML

--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
     <h1>Auva Amirmokri</h1>
     <p>Class of '24 Computer Science Student at the University of Maryland</p>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li> <!-- New tab for Projects page -->
+      <li><a href="#connect">Connect with Me</a></li> <!-- New tab for Connect with Me page -->
+    </ul>
+  </nav>
   <main>
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hi, I'm Auva Amirmokri! I'm passionate about technology and the environment, and love to explore the intersectionality of the two. Computer Science student at the University of Maryland. 
-        I love coding and exploring the latest technologies. I love web development and backend development, specifically in Java and JS.
-        <br> My other interests include analog photography, traveling, exploring nature, and spending time with animals! 
+        Hi, I'm Auva Amirmokri! I'm passionate about teaching, technology, and the environment, and love to explore the
+        intersectionality of the three. Computer Science student at the University of Maryland. 
+        I love coding and exploring the latest technologies. I love web development and backend development,
+        specifically in Java and JS.
+        <br> My other interests include analog photography, traveling, exploring nature, painting/drawing, and
+        spending time with animals! 
       </p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
-      <ul>
+      <ul type="circle">
         <li>Java</li>
         <li>HTML</li>
         <li>CSS</li>
@@ -34,8 +45,23 @@
         <li>C++</li>
       </ul>
     </section>
-    <section id="contact">
-      <h2>Contact</h2>
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>
+        Here are some of the projects I've worked on:
+        <br>
+        - Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis ante eget urna tristique
+        interdum. Donec eu urna et odio feugiat semper. Maecenas volutpat auctor nisi, et bibendum quam consequat
+        non.
+        <br>
+        - Project 2: Nulla facilisi. Vestibulum in orci eget ex vulputate tempus. Donec auctor libero mi, vel
+        ullamcorper ex laoreet at.
+        <br>
+        - Project 3: Duis ac metus eget elit vehicula tincidunt in id ex. Proin interdum eros sed laoreet bibendum.
+      </p>
+    </section>
+    <section id="connect">
+      <h2>Connect with Me</h2>
       <p>
         Questions, comments, want to chat? Feel free to reach out to me at:
         <a href="mailto:auvaamirmokri@gmail.com">auvaamirmokri@gmail.com</a>
