--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auva Amirmokri</title>
-  <!-- add image-->
+  <!-- Add image -->
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,8 +18,11 @@
     <ul>
       <li><a href="#about">About Me</a></li>
       <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li> <!-- New tab for Projects page -->
-      <li><a href="#connect">Connect with Me</a></li> <!-- New tab for Connect with Me page -->
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#work-experience">Work Experience</a></li>
+      <li><a href="#leadership">Leadership Experience</a></li>
+      <li><a href="#awards">Honors and Awards</a></li>
+      <li><a href="#connect">Connect with Me</a></li>
     </ul>
   </nav>
   <main>
@@ -35,15 +38,42 @@
       </p>
     </section>
     <section id="skills">
-      <h2>Skills</h2>
-      <ul type="circle">
-        <li>Java</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>C++</li>
-      </ul>
+      <h2>Languages & Skills</h2>
+      <div class="skills-grid">
+        <div class="skills-column">
+          <ul>
+            <li>Java</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>C</li>
+            <li>C++</li>
+            <li>Python</li>
+            <li>Swift</li>
+          </ul>
+        </div>
+        <div class="skills-column">
+          <ul>
+            <li>Kotlin</li>
+            <li>Julia</li>
+            <li>Ruby</li>
+            <li>R</li>
+            <li>SQL</li>
+            <li>MATLAB</li>
+            <li>OCaml</li>
+            <li>Rust</li>
+          </ul>
+        </div>
+      </div>
+      <p>
+        Have worked in-depth with Linux, Git, JIRA, Eclipse, Android Studio, Visual Studios, Repl.it, Rally, and more.
+        <br>
+        Curious and creative thinker who loves asking questions and problem-solving.
+        <br>
+        Fluent in English, Farsi, and Spanish.
+        <br>
+        Strong communication skills, easily retain new information, and can adapt to different environments quickly.
+      </p>
     </section>
     <section id="projects">
       <h2>Projects</h2>
@@ -59,6 +89,82 @@
         <br>
         - Project 3: Duis ac metus eget elit vehicula tincidunt in id ex. Proin interdum eros sed laoreet bibendum.
       </p>
+    </section>
+    <section id="work-experience">
+      <h2>Work Experience</h2>
+      <ul>
+        <li>
+          <strong>Ford Motor Company, Software Engineering Intern</strong>
+          <br>
+          June 2022 - August 2022, June 2023 - August 2023
+          <ul>
+            <li>2023: Collaborated with other interns to revamp a Message Authoring service for dealers to communicate, worked on frontend (Angular, HTML, CSS, JS) and backend (Java)</li>
+            <li>2022: Independently created a Javascript interpreter in Kotlin to simulate data for car infotainment systems in the production environment</li>
+            <li>Participated in daily stand-up meetings and Sprint kick-off meetings as a part of Agile methodology</li>
+          </ul>
+        </li>
+        <li>
+          <strong>University of Maryland CS Department, Teaching Assistant</strong>
+          <br>
+          January 2023 - May 2023
+          <ul>
+            <li>Lead discussion for CMSC132, Object-Oriented Programming II in Java, and help students understand material</li>
+            <li>Create lesson plans for students, administer and grade quizzes/exams, create exciting learning environment</li>
+          </ul>
+        </li>
+        <!-- Add more work experiences here -->
+      </ul>
+    </section>
+    <section id="leadership">
+      <h2>Leadership Experience</h2>
+      <ul>
+        <li>
+          <strong>Technica Hackathon, Director</strong>
+          <br>
+          October 2022 - Present
+          <ul>
+            <li>Oversee 10 organizers as experience team director for the world’s largest hackathon for underrepresented genders</li>
+            <li>Lead weekly meetings, facilitate team bonding, keep each subteam on track to meet our goals</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Maryland International Relations Association, President</strong>
+          <br>
+          May 2022 - Present
+          <ul>
+            <li>Lead the University of Maryland Model United Nations team and associate programs</li>
+            <li>Plan and conduct meetings/flagship conference, prepare team members for national/international conferences</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Bitcamp Hackathon, Organizer</strong>
+          <br>
+          October 2022 - Present
+          <ul>
+            <li>Brainstorm merchandise ideas for participants of University of Maryland’s hackathon</li>
+            <li>Reach out to vendors to come to order specific items</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Technica Hackathon, Organizer</strong>
+          <br>
+          May 2022 - October 2022
+          <ul>
+            <li>Create, design, and carry out events for thousands of hackathon participants to participate in</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section id="awards">
+      <h2>Honors and Awards</h2>
+      <ul>
+        <li>Adele’s Circle of Women Scholarship winner 2022</li>
+        <li>Technica Hackathon winner (2018, 2019, 2021)</li>
+        <li>Andrew Reisse Scholarship Awardee 2021</li>
+        <li>University of Maryland’s Dean List Spring 2021</li>
+        <li>NCWIT award winner (2018, 2019, 2020)</li>
+        <li>Google Change the Game 2020 Winner and participant of Google CSSI</li>
+      </ul>
     </section>
     <section id="connect">
       <h2>Connect with Me</h2>
