--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Auva Amirmokri</h1>
-    <p>Class of '24 Computer Science Student at the University of Maryland</p>
+    <p>Computer Science Student at the University of Maryland | Winter '23 Grad</p>
   </header>
   <nav>
     <ul>
@@ -32,7 +32,7 @@
         Hi, I'm Auva Amirmokri! I'm passionate about teaching, technology, and the environment, and love to explore the
         intersectionality of the three. Computer Science student at the University of Maryland. 
         I love coding and exploring the latest technologies. I love web development and backend development,
-        specifically in Java and JS.
+        specifically in Java and JS. I am a current senior at UMD, graduating early in the Winter!
         <br> My other interests include analog photography, traveling, exploring nature, painting/drawing, and
         spending time with animals! 
       </p>
@@ -80,14 +80,11 @@
       <p>
         Here are some of the projects I've worked on:
         <br>
-        - Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis ante eget urna tristique
-        interdum. Donec eu urna et odio feugiat semper. Maecenas volutpat auctor nisi, et bibendum quam consequat
-        non.
+        - Project 1: 
         <br>
-        - Project 2: Nulla facilisi. Vestibulum in orci eget ex vulputate tempus. Donec auctor libero mi, vel
-        ullamcorper ex laoreet at.
+        - Project 2: 
         <br>
-        - Project 3: Duis ac metus eget elit vehicula tincidunt in id ex. Proin interdum eros sed laoreet bibendum.
+        - Project 3: 
       </p>
     </section>
     <section id="work-experience">
@@ -106,9 +103,9 @@
         <li>
           <strong>University of Maryland CS Department, Teaching Assistant</strong>
           <br>
-          January 2023 - May 2023
+          January 2023 - May 2023, August 2023 - Present
           <ul>
-            <li>Lead discussion for CMSC132, Object-Oriented Programming II in Java, and help students understand material</li>
+            <li>Lead discussion for introductory CS courses, Object-Oriented Programming I and II in Java, and help students understand material</li>
             <li>Create lesson plans for students, administer and grade quizzes/exams, create exciting learning environment</li>
           </ul>
         </li>
@@ -139,7 +136,7 @@
         <li>
           <strong>Bitcamp Hackathon, Organizer</strong>
           <br>
-          October 2022 - Present
+          October 2022 - May 2023
           <ul>
             <li>Brainstorm merchandise ideas for participants of University of Maryland’s hackathon</li>
             <li>Reach out to vendors to come to order specific items</li>
@@ -170,7 +167,8 @@
       <h2>Connect with Me</h2>
       <p>
         Questions, comments, want to chat? Feel free to reach out to me at:
-        <a href="mailto:auvaamirmokri@gmail.com">auvaamirmokri@gmail.com</a>
+        <a href="mailto:auvaamirmokri@gmail.com">auvaamirmokri@gmail.com</a><br>
+        and connect with me on LinkedIn <a href="https://www.linkedin.com/in/auva-amirmokri/">here!</a>
       </p>
     </section>
   </main>
