--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <section id="projects">
       <h2>Projects</h2>
       <p>
-        Here are some of the projects I've worked on:
+        Here are some fun projects I've worked on:
         <br>
-        - Project 1: 
+        - <a href="https://devpost.com/software/blegin">Blegin - Mental Health Tracker App</a>
         <br>
-        - Project 2: 
+        - <a href="https://auvas-arcade.glitch.me/index.html?count=">Auva's Arcade</a> 
         <br>
-        - Project 3: 
+        - <a href="https://github.com/auva127/CMSC335Final">PokeAPI Project</a>
       </p>
     </section>
     <section id="work-experience">
