--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Auva Amirmokri</h1>
-    <p>Computer Science Student at the University of Maryland | Winter '23 Grad</p>
+    <p>Software Engineer | Winter '23 Computer Science Grad from the University of Maryland</p>
   </header>
   <nav>
     <ul>
@@ -32,9 +32,10 @@
         Hi, I'm Auva Amirmokri! I'm passionate about teaching, technology, and the environment, and love to explore the
         intersectionality of the three. Computer Science student at the University of Maryland. 
         I love coding and exploring the latest technologies. I love web development and backend development,
-        specifically in Java and JS. I am a current senior at UMD, graduating early in the Winter!
-        <br> My other interests include analog photography, traveling, exploring nature, painting/drawing, and
-        spending time with animals! 
+        specifically in Java and JS. I also just graduated early from the University of Maryland in December, earning my degree in 
+        Computer Science and minoring in Sustainability Studies!
+        <br> My other interests include analog photography, traveling, playing/watching soccer, exploring nature, 
+        painting/drawing, and spending time with animals! 
       </p>
     </section>
     <section id="skills">
@@ -45,7 +46,7 @@
             <li>Java</li>
             <li>HTML</li>
             <li>CSS</li>
-            <li>Javascript</li>
+            <li>Javascript (Node, React, TypeScript, p5)</li>
             <li>C</li>
             <li>C++</li>
             <li>Python</li>
@@ -66,90 +67,127 @@
         </div>
       </div>
       <p>
-        Have worked in-depth with Linux, Git, JIRA, Eclipse, Android Studio, Visual Studios, Repl.it, Rally, and more.
+        Have worked in-depth with Linux, Git, JIRA, Rally, Eclipse, Android Studio, Visual Studios
+        Docker, AWS, Azure, Terraform, MongoDB, .NET Framework, RESTful API development.
+        <br>
         <br>
         Curious and creative thinker who loves asking questions and problem-solving.
-        <br>
+        <br><br>
         Fluent in English, Farsi, and Spanish.
-        <br>
+        <br><br>
         Strong communication skills, easily retain new information, and can adapt to different environments quickly.
       </p>
     </section>
     <section id="projects">
       <h2>Projects</h2>
       <p>
-        Here are some fun projects I've worked on:
+        Here are some of my favorite projects I've worked on, some for school and some personal projects!
+        <br>
+        - <a href="auva_datascience_proj.html">Moneyball - An MLB Analysis CMSC320</a>
+        <br>
+        - <a href="finalgroupproj.html">UMD Grades Data Analysis - CMSC320 Final Group Project</a>
         <br>
         - <a href="https://devpost.com/software/blegin">Blegin - Mental Health Tracker App</a>
         <br>
         - <a href="https://auvas-arcade.glitch.me/index.html?count=">Auva's Arcade</a> 
         <br>
-        - <a href="https://github.com/auva127/CMSC335Final">PokeAPI Project</a>
+        - <a href="https://github.com/auva127/CMSC335Final">PokeAPI Project CMSC335</a>
       </p>
     </section>
     <section id="work-experience">
       <h2>Work Experience</h2>
       <ul>
+
         <li>
-          <strong>Ford Motor Company, Software Engineering Intern</strong>
+          <strong>Founder @ Pawmodoro</strong>
           <br>
-          June 2022 - August 2022, June 2023 - August 2023
+          January 2024 — Present
           <ul>
-            <li>2023: Collaborated with other interns to revamp a Message Authoring service for dealers to communicate, worked on frontend (Angular, HTML, CSS, JS) and backend (Java)</li>
-            <li>2022: Independently created a Javascript interpreter in Kotlin to simulate data for car infotainment systems in the production environment</li>
-            <li>Participated in daily stand-up meetings and Sprint kick-off meetings as a part of Agile methodology</li>
+            <li> Conceptualized and developing Pawmodoro, an iOS app to help busy folks create pet caretaking schedules</li>
+            <li> Solely responsible for Pawmodoro’s entire lifecycle, from ideation to design, coding, testing, future deployment</li>
           </ul>
         </li>
+
         <li>
-          <strong>University of Maryland CS Department, Teaching Assistant</strong>
+          <strong>Teaching Assistant @ UMD</strong>
           <br>
-          January 2023 - May 2023, August 2023 - Present
+          January 2023 — December 2023
           <ul>
-            <li>Lead discussion for introductory CS courses, Object-Oriented Programming I and II in Java, and help students understand material</li>
-            <li>Create lesson plans for students, administer and grade quizzes/exams, create exciting learning environment</li>
+            <li> Facilitated in-depth discussions for Object Oriented Programming I and II in Java, while fostering comprehension </li>
+            <li> Developed methodical lesson plans, conducted assessments, cultivated engaging educational atmosphere for 40 students</li>
           </ul>
         </li>
+
+        <li>
+          <strong>Full Stack Developer Intern @ Ford Motor Company</strong>
+          <br>
+          June 2023 - August 2023
+          <ul>
+            <li>Collaborated with three other interns to overhaul Ford’s Message Authoring service, a pivotal communication tool for 300,000 dealers through frontend (Angular, HTML, CSS, TypeScript), backend (Java, Springboot) development</li>
+            <li>Refined user interface according to designer specifications to create a more user-friendly website and strengthened underlying infrastructure to optimize data storage process
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>Software Engineering Intern @ Ford Motor Company</strong>
+          <br>
+          June 2022 - August 2022
+          <ul>
+            <li>Independently developed and implemented a robust and reusable JavaScript/JSON interpreter using Kotlin to emulate data interactions for car infotainment systems within a live production environment
+            </li>
+          </ul>
+        </li>
+       
+        <li>
+          <strong>Researcher @ University of Maryland Department of Biology</strong>
+          <br>
+          December 2020 - January 2022
+          <ul>
+            <li>Crafted and meticulously debugged code in Julia and Python to execute simulations pertaining to the Lilliput effect, a biological phenomenon involving the shrinking size of species after a mass extinction
+            </li>
+            <li>Employed supercomputer clusters for high-performance computing, leading to data-driven insights/conclusions
+            </li>
+          </ul>
+        </li>
+
+
         <!-- Add more work experiences here -->
       </ul>
     </section>
     <section id="leadership">
       <h2>Leadership Experience</h2>
       <ul>
+
         <li>
-          <strong>Technica Hackathon, Director</strong>
+          <strong>Experience Team Director @ Technica</strong>
           <br>
-          October 2022 - Present
+          October 2022 - December 2023
           <ul>
-            <li>Oversee 10 organizers as experience team director for the world’s largest hackathon for underrepresented genders</li>
-            <li>Lead weekly meetings, facilitate team bonding, keep each subteam on track to meet our goals</li>
+            <li>Oversaw 10 experience organizers for the world’s largest hackathon for underrepresented genders</li>
+            <li>Supported merchandise, mini-events, virtual interactivity, and organizer bonding subteams in achieving their respective goals, promoting creative and collaborative solutions in weekly meetings</li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>President @ Maryland International Relations Association</strong>
+          <br>
+          May 2022 - December 2023
+          <ul>
+            <li>Served as head of the University of Maryland Model United Nations 200-member team and associate programs</li>
+            <li>Planned and conducted weekly meetings and flagship conference, prepared team members for national and international conferences through innovative training exercises emphasizing public speaking and written communication</li>
           </ul>
         </li>
         <li>
-          <strong>Maryland International Relations Association, President</strong>
-          <br>
-          May 2022 - Present
-          <ul>
-            <li>Lead the University of Maryland Model United Nations team and associate programs</li>
-            <li>Plan and conduct meetings/flagship conference, prepare team members for national/international conferences</li>
-          </ul>
-        </li>
-        <li>
-          <strong>Bitcamp Hackathon, Organizer</strong>
+          <strong>Experience Organizer @ Bitcamp</strong>
           <br>
           October 2022 - May 2023
           <ul>
-            <li>Brainstorm merchandise ideas for participants of University of Maryland’s hackathon</li>
-            <li>Reach out to vendors to come to order specific items</li>
+            <li>Brainstormed and designed merchandise for participants of the largest collegiate hackathon on the East Coast</li>
+            <li>Researched and negotiated with vendors, designed venue decorations, and ran mini-events</li>
           </ul>
         </li>
-        <li>
-          <strong>Technica Hackathon, Organizer</strong>
-          <br>
-          May 2022 - October 2022
-          <ul>
-            <li>Create, design, and carry out events for thousands of hackathon participants to participate in</li>
-          </ul>
-        </li>
+        
       </ul>
     </section>
     <section id="awards">
